# LumenX-Studio-Pro

./: README.md  pyproject.toml  start_backend.sh
docs/: AI漫剧生产流程操作手册.md  AI漫剧调用链与成片问题解析.md  使用uv安装与启动.md  平台架构与典型场景图解.md  新手操作手册构建提示词.md  本项目技术栈选型方案.md  环境安装排障记录.md  项目技术栈评估报告.md
frontend/: package.json
frontend/src/app/: globals.css  layout.tsx
frontend/src/components/modules/: VideoAssembly.tsx
frontend/src/store/: projectStore.ts
scripts/: dev-setup.js
src/apps/comic_gen/: pipeline.py
src/models/: wanx.py
